--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>atharvasatpute20@mail.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9284309983</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Warje Pune-58</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Warje,Pune-58</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -249,7 +249,7 @@
                   scalable system architecture. Passionate about clean code and solving real-world problems
                   efficiently.</em></p>
               <ul>
-                <li>Warje pune-58</li>
+                <li>Warje, pune-58</li>
                 <li>9284309983</li>
                 <li>atharvasatpute20@gmail.com</li>
               </ul>
@@ -260,17 +260,18 @@
               <h4>Master in Computer Application </h4>
               <h5>2023 - Present</h5>
               <p><em>MIT World Peace University</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Deepened my knowledge in <strong>software development</strong>, <strong>data structures</strong>, and <strong>system design</strong> while working on <strong>real-world projects</strong> and collaborative <strong>coding challenges</strong>.</p>
+
+
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Bachelor of Business Administration Computer Applications 2019-2022</h4>
               <h5><strong>CGPA of 7.89/10 </strong> </h5>
               <p><em>MES Garware College of Commerce</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <p>Graduated with a solid academic record, gaining hands-on experience in <strong>programming</strong>, <strong>business analytics</strong>, and <strong>software development</strong> through <strong>project-based learning</strong>.</p>
+
+
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -735,7 +736,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2> Achievements & Certifications </h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>These achievements and certifications reflect my skills, competencies, and professional growth.</p>
+
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
