--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                   </div>
 
                   <div class="modal-footer justify-content-center">
-                    <a href="https://github.com/your-repo-link" target="_blank"
+                    <a href="https://github.com/atharvasatpute06/Job-Portal.git" target="_blank"
                       class="btn btn-primary btn-lg rounded-pill shadow-sm px-4">View Code </a>
 
                   </div>
@@ -496,7 +496,7 @@
                       
                   </div>
                   <div class="modal-footer justify-content-center">
-                    <a href="https://github.com/your-repo-link" target="_blank"
+                    <a href="https://github.com/atharvasatpute06/Online-Banking-System.git" target="_blank"
                       class="btn btn-primary btn-lg rounded-pill shadow-sm px-4">View Code </a>
                   </div>
                 </div>
@@ -572,7 +572,7 @@
                     </div>
               
                     <div class="modal-footer justify-content-center">
-                      <a href="https://github.com/your-repo-link" target="_blank"
+                      <a href="https://github.com/atharvasatpute06/E-Commerce-Website.git" target="_blank"
                         class="btn btn-primary btn-lg rounded-pill shadow-sm px-4">View Code</a>
                     </div>
                   </div>
