--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
               Check out my resume below for more details on my qualifications and experience.
             <div class="py-3 d-flex justify-content-center">
-              <a href="assets/resume/Atharva Sunil Satpute.jpg" class="btn btn-dark rounded-3 px-4 py-2 shadow-sm">
+              <a href="assets/resume/Atharva Sunil Satpute.pdf" class="btn btn-dark rounded-3 px-4 py-2 shadow-sm">
                 <i class="bi bi-briefcase-fill me-2"></i> View Resume</a>
             </div>
 
@@ -322,7 +322,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Projects</h2>
-        <p>Below is a summary of my project, which showcases my skills and expertise.</p>
+        <p>Here is an overview of my projects, reflecting my expertise and skill set.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -1028,7 +1028,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Feel free to contact me for any queries or opportunities. I'm happy to connect!</p>
+        <p>Feel free to get in touch regarding any potential job openings.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade" data-aos-delay="100">
